# novus

./: README.md  main.c  projectWindow.c  projectWindow.py  temporary file.txt
App Preferences/Settings/: CopyStatus.txt
Archive/: projectWindow.py
Novus/: CMakeLists.txt  FileItem.cpp  FileItem.h  FolderItem.cpp  FolderItem.h  SplashScreen.cpp  SplashScreen.h  SplashScreen.ui  explorer.cpp  explorer.h  explorer.ui  main.cpp  novus.cpp  novus.h  preferences.cpp  preferences.h  preferences.ui  projectWindow.ui  resources.qrc
Novus/Content/Templates/: info.txt
Novus/Content/Templates/Explorer Folders Template/Sounds/Demo/: Info.txt
